<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/common_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<View
		android:id="@+id/liner"
		android:layout_width="match_parent"
		android:layout_height="0.5dp"
		android:background="@color/qc_liner"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_below="@id/liner"
        android:orientation="vertical">
        <!-- 问题描述 -->

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:paddingLeft="@dimen/user_feedback_lolipop_padding_left"
			android:layout_marginBottom="16dp"
			android:layout_marginTop="14dp"
			android:text="@string/feedback_question_description"
			android:textSize="@dimen/common_main_size" />

    	<RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="@dimen/user_feedback_lolipop_padding_left"
        	android:paddingRight="@dimen/user_feedback_lolipop_padding_right"
        	android:paddingBottom="34dp"
	        android:orientation="vertical">
    	    <EditText
	            android:id="@+id/edit_question_description"
	            android:layout_width="324dp"
	            android:layout_height="123dp"
	            android:hint="@string/feedback_question_hint"
	            android:maxLines="9"
				android:gravity="top|left"
				android:background="@null"
				android:textColorHint="@color/user_feedback_edit_text"
				android:textColor="@color/font_title"
	            android:textCursorDrawable="@drawable/edittext_color_cursor"
	            android:textColorHighlight="@color/main_tabtitle_select"
	            android:textSize="11sp" />
			<View
				android:layout_width="324dp"
				android:layout_height="0.5dp"
				android:layout_centerHorizontal="true"
				android:layout_below="@id/edit_question_description"
				android:background="@color/edit_bg_color"/>
    	</RelativeLayout>

		<!-- 反馈截图 -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="16dp"
			android:paddingLeft="@dimen/user_feedback_lolipop_padding_left"
			android:paddingRight="@dimen/user_feedback_lolipop_padding_right"
			android:text="@string/feedback_add_picture"
			android:textSize="@dimen/common_main_size" />

		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/user_feedback_lolipop_padding_left"
			android:layout_marginBottom="34dp">
		<FrameLayout
			android:id="@+id/pic1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp">

			<ImageButton
				android:id="@+id/edit_add_picture"
				android:layout_width="@dimen/user_feedback_lolipop_image_button_width"
				android:layout_height="@dimen/user_feedback_lolipop_image_button_height"
				android:background="@drawable/button_transparent"
				android:onClick="onAddPictureButtonClick"
				android:scaleType="matrix"
				android:src="@drawable/add_img" />

			<ImageButton
				android:id="@+id/edit_delete_picture"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:background="@null"
				android:onClick="onDeletePictureButtonClick"
				android:src="@drawable/btn_delete_pic"
				android:visibility="gone" />
		</FrameLayout>
			<FrameLayout
				android:id="@+id/pic2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_toRightOf="@+id/pic1"
				android:layout_marginBottom="5dp">

				<ImageButton
					android:id="@+id/edit_add_picture2"
					android:layout_width="@dimen/user_feedback_lolipop_image_button_width"
					android:layout_height="@dimen/user_feedback_lolipop_image_button_height"
					android:background="@drawable/button_transparent"
					android:onClick="onAddPictureButtonClick"
					android:scaleType="matrix"
					android:visibility="gone"
					android:src="@drawable/add_img" />

				<ImageButton
					android:id="@+id/edit_delete_picture2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:background="@null"
					android:onClick="onDeletePictureButtonClick"
					android:src="@drawable/btn_delete_pic"
					android:visibility="gone" />
			</FrameLayout>
			<FrameLayout
				android:id="@+id/pic3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_toRightOf="@+id/pic2"
				android:layout_marginBottom="5dp">

				<ImageButton
					android:id="@+id/edit_add_picture3"
					android:layout_width="@dimen/user_feedback_lolipop_image_button_width"
					android:layout_height="@dimen/user_feedback_lolipop_image_button_height"
					android:background="@drawable/button_transparent"
					android:onClick="onAddPictureButtonClick"
					android:scaleType="matrix"
					android:visibility="gone"
					android:src="@drawable/add_img" />

				<ImageButton
					android:id="@+id/edit_delete_picture3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:background="@null"
					android:onClick="onDeletePictureButtonClick"
					android:src="@drawable/btn_delete_pic"
					android:visibility="gone" />
			</FrameLayout>
		</RelativeLayout>
		<!-- 联系方式 -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="13dp"
			android:paddingLeft="@dimen/user_feedback_lolipop_padding_left"
			android:paddingRight="@dimen/user_feedback_lolipop_padding_right"
			android:text="@string/feedback_email"
			android:textSize="@dimen/common_main_size" />
        
        <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="@dimen/user_feedback_lolipop_padding_left"
        	android:paddingRight="@dimen/user_feedback_lolipop_padding_right"
        	android:paddingBottom="@dimen/user_feedback_lolipop_edit_padding_bottom"
	        android:orientation="vertical">
    	    <EditText
	            android:id="@+id/edit_add_email"
	            android:layout_width="match_parent"
				android:background="@null"
	            android:layout_height="20dp"
	            android:minHeight="@dimen/user_feedback_lolipop_edit_minheight"
	            android:hint="@string/feedback_email_hint"
	            android:inputType="textEmailAddress"
	            android:singleLine="true"
				android:textColorHint="@color/user_feedback_edit_text"
	            android:textColor="@color/font_title"
	            android:textCursorDrawable="@drawable/edittext_color_cursor"
		    	android:textColorHighlight="@color/main_tabtitle_select"
				android:gravity="top|left"
				android:textSize="11sp" />
			<View
				android:layout_width="324dp"
				android:layout_height="0.5dp"
				android:layout_centerHorizontal="true"
				android:layout_below="@id/edit_add_email"
				android:background="@color/edit_bg_color"/>
    	</RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/user_feedback_commit"
        android:layout_width="324dp"
        android:layout_height="44dp"
		android:clickable="true"
		android:gravity="center"
        android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="34dp"
        android:background="@drawable/commit_btn_selector"
        android:text="@string/commit"
		android:textColor="@color/white"
        android:textSize="16sp" />

<!--    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/user_feedback_commit"
        android:background="@color/divider_line_and_button_pressed" />-->

</RelativeLayout>