<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	>
	<!-- android:background="#ffffff" -->

	<TextView 
        android:id="@+id/text_msg_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dip"
        android:paddingTop="10dip"
        android:paddingRight="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/push_msg_title"
        android:textColor="@color/main_theme"
        android:height="30dp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollHorizontally="true"
        android:marqueeRepeatLimit="marquee_forever" />

	<View
	    android:layout_below="@id/text_msg_title"
	    android:id="@+id/divide_line"
	    android:layout_width="match_parent"
	    android:layout_height="1.3dip"
	    android:gravity="fill_horizontal"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:background="@color/divider_line_and_button_pressed"
	    /> 	
	    <!-- android:scaleType="fitXY" -->
	    <!-- android:src="@drawable/line" -->
	
    <ScrollView
        android:id="@+id/text_msg_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingTop="10dip"
        android:paddingRight="10dip"
        android:layout_below="@id/text_msg_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="11.5dp"
                android:id="@+id/text_msg"
                android:lineSpacingExtra="16.5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_msg_summary"
                android:gravity="center_vertical"
                />
                <!-- android:textColor="#444444" -->
        </LinearLayout>
    </ScrollView> 
    
    <ScrollView
        android:id="@+id/url_msg_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:layout_below="@id/text_msg_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <WebView
                android:layout_marginTop="11.5dp"
		        android:id="@+id/webview"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        />
        </LinearLayout>
    </ScrollView>
    
    <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@android:color/white"
	    android:layout_below="@id/divide_line"
	    android:id="@+id/app_msg_view"
	    >
        
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:paddingBottom="20dp"
		    >
            
	        <RelativeLayout
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			    >
			    
		        <RelativeLayout
			        android:id="@+id/item_info_layout"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					>
				
				    <ImageView
					    android:id="@+id/item_image"
						android:layout_width="56dp"
						android:layout_height="56dp"
						android:layout_marginLeft="15dp"
						android:layout_marginRight="10dp"
						android:background="@drawable/default_img_game"
						android:scaleType="centerCrop"
						android:layout_centerVertical="true"
						/>
				    
				    <RelativeLayout
					    android:id="@+id/layout_download"
					    android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:layout_alignParentRight="true"
						android:layout_centerVertical="true"
						android:layout_marginRight="20dp"
					    >
					    <!-- modified by zhengguang.yang@20160301 start for text can't show in theme material-->
				        <!-- 
				        <Button 
						    android:id="@+id/btn_download"
							android:layout_width="80dp"
							android:layout_height="wrap_content"
							android:focusable="false"
							android:background="@drawable/detail_download_btn_selected"
							/>
				        <TextView 
						    android:id="@+id/download_status_text"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/push_download_start"
							android:textSize="14sp"
						   	android:singleLine="true"
							android:textColor="@android:color/white"
							android:layout_centerInParent="true"
							/>
							-->
				        
				        <Button 
						    android:id="@+id/btn_download"
							android:layout_width="80dp"
							android:layout_height="wrap_content"
							android:focusable="false"
							android:background="@drawable/detail_download_btn_selected"
							android:gravity="center"
	                        android:text="@string/push_download_start"
	                        android:textColor="@android:color/white"
	                        android:textSize="16sp"
							/>
					    <!-- modified by zhengguang.yang@20160301 end-->
				        
				    </RelativeLayout>
				    
				    <RelativeLayout
					    android:layout_width="150dp"
						android:layout_height="wrap_content"
						android:layout_toRightOf="@+id/item_image"
						android:layout_centerVertical="true"
						android:layout_marginRight="70dp"
					    >
					    
				        <TextView 
						    android:id="@+id/app_name"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textSize="18sp"
						   	android:singleLine="true"
							android:textColor="@color/font_title"
							/>
				        
				        <TextView
				            android:id="@+id/app_size"
				            android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textSize="12sp"
						   	android:singleLine="true"
							android:textColor="@color/font_subtitle"
							android:layout_marginTop="3dp"
							android:layout_below="@id/app_name"
				            />
				        
				        <TextView 
						    android:id="@+id/app_amount"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textSize="12sp"
							android:layout_marginLeft="10dp"
						   	android:singleLine="true"
							android:textColor="@color/font_subtitle"
							android:layout_alignTop="@id/app_size"
							android:layout_toRightOf="@id/app_size"
							/>
				    </RelativeLayout>
				    
				</RelativeLayout>
		        
		        <!-- pic scroll view -->
		        <HorizontalScrollView
			        android:id="@+id/pic_detail_scroll"
			        android:layout_below="@+id/item_info_layout"
			        android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="2dp"
					android:paddingRight="2dp"
					android:scrollbars="none"
			        >
					<!-- android:background="@drawable/pic_bg" -->
				    
		            <LinearLayout
			            android:id="@+id/detail_pic_layout"
			            android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
			            />
		        </HorizontalScrollView>
		        
		        <TextView 
				    android:id="@+id/app_detail_title"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="14sp"
					android:singleLine="true"
					android:text="@string/app_description"
					android:layout_marginLeft="15dp"
					android:layout_marginRight="15dp"
					android:layout_marginTop="5dp"
					android:textColor="@color/main_theme"
					android:layout_below="@id/pic_detail_scroll"
					/>
		        
		        <View
			        android:id="@+id/line_img"
			        android:layout_width="fill_parent"
					android:layout_height="0.5dp"
					android:background="@color/divider_line_and_button_pressed"
					android:layout_marginTop="5dp"
					android:layout_below="@id/app_detail_title"
			        />
					<!-- android:scaleType="fitXY" -->
					<!-- android:src="@drawable/line2" -->
		        
		        <TextView 
				    android:id="@+id/app_detail_text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="16sp"
					android:maxLines="4"
					android:layout_marginLeft="15dp"
					android:layout_marginRight="15dp"
					android:layout_marginTop="2dp"
					android:layout_below="@id/line_img"
					/>
					<!-- android:textColor="#444444" -->
		        
		        <LinearLayout
			        android:id="@+id/btn_app_detail_more_layout"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal"
			        android:layout_marginTop="8dp"
			        android:layout_marginRight="20dp"
			        android:layout_below="@id/app_detail_text"
			        android:layout_alignParentRight="true"
			        >
		            
		            <ImageView
				        android:id="@+id/btn_app_detail_more"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:background="@drawable/detail_more_btn_selected_1"
				        />
		            
		            <TextView 
					    android:id="@+id/app_detail_more_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="14sp"
						android:text="@string/push_msg_description_more"
						android:layout_marginLeft="5dp"
						android:textColor="@color/main_theme"
						android:layout_gravity="center_vertical"
						/>
		        </LinearLayout>
		        
		        <ProgressBar
					android:id="@+id/progressBar"
					android:layout_width="50dp"
					android:layout_height="50dp"
					style="?android:attr/progressBarStyleLarge"
					android:layout_centerVertical="true"
					android:layout_centerHorizontal="true"
					android:visibility="gone"
					/>
		    </RelativeLayout>
	    </LinearLayout>
    </ScrollView>
    
</RelativeLayout>
